@@ -456,3 +456,4 @@ nfqws,blockcheck: --dpi-desync-fake-tls-mod
 v70.1
 
 nfqws: --dpi-desync-fake-tls-mod=dupsid
+nfqws,tpws: test accessibility of list files after privs drop
